# calendar-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  response.http
templates/: calendar.http  diary.html  diary.http  monthly_calendar.html  yearly_calendar.html
