[package]
name = "diary"
version = "0.1.0"
edition = "2021"
license = "MIT"

default-run = "diary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
computus = "1.1.0"
thiserror = "1.0.52"
webbrowser = "0.8.12"
