[package]
name = "diary"
version = "0.1.0"
authors = ["Samuel Hicks"]
edition = "2021"
license = "MIT"

default-run = "diary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
build-time = "0.1.3"
chrono = "0.4.39"
clap = { version = "4.4.11", features = ["derive"] }
computus = "1.1.0"
directories = "5.0.1"
druid = { version = "0.8.3", features = ["im"] }
itertools = "0.14.0"
markdown = "0.3.0"
webbrowser = "1.0.3"
